--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,6 @@
 version: "3.3"
 services:
-#    db:
-#      image: mysql:5.7
-#      command: mysqld --character-set-server=utf8 --collation-server=utf8_general_ci
-#      ports:
-#        - "3308:3306"
-#      environment:
-#        MYSQL_ROOT_PASSWORD: root
-#        MYSQL_DATABASE: aps_db
-#        MYSQL_USER: aps_sharedfarm
-#        MYSQL_PASSWORD: aps_sharedfarm_pass
-#        TZ: 'Asia/Dhaka'
-#      volumes:
-#        - mysql:/var/lib/mysql
-#        - ./sql:/docker-entrypoint-initdb.d
-#      networks:
-#        - aps_shared_farm-network
+#    db:    # see mysql/docker-compose_mysql.yml
     web:
       image: aps_shared_farm
       restart: always
@@ -30,7 +15,6 @@ services:
       expose:
         - 8000
       links:
-#        - db
         - redis
       depends_on:
         - migration
@@ -43,8 +27,6 @@ services:
       command: python manage.py migrate
       volumes:
         - .:/aps_shared_farm
-#      links:
-#        - db
       depends_on:
         - make_migrations
       networks:
@@ -58,10 +40,7 @@ services:
       volumes:
         - .:/aps_shared_farm
       links:
-#        - db
         - redis
-#      depends_on:
-#        - db
       networks:
         - mysql_aps_shared_farm-network
     redis:
