--- a/mysql/docker-compose_mysql.yml
+++ b/mysql/docker-compose_mysql.yml
@@ -4,8 +4,8 @@ services:
       image: mysql:5.7
       command: mysqld --character-set-server=utf8 --collation-server=utf8_general_ci
 #     comment out if needed locally
-#      ports:
-#        - "3308:3306"
+      ports:
+        - "3308:3306"
       environment:
         MYSQL_ROOT_PASSWORD: root
         MYSQL_DATABASE: aps_db
