--- a/requirements.txt
+++ b/requirements.txt
@@ -66,14 +66,15 @@ inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.0.1
 kombu==5.1.0
-lxml==4.6.3
-MarkupSafe==2.0.1
-mysqlclient==2.0.3
+lxml==4.8.0
+MarkupSafe==2.1.0
+mysqlclient==2.1.0
 openapi-codec==1.3.2
 packaging==21.0
-Pillow==8.2.0
+Pillow==8.4.0
 premailer==3.8.0
 prompt-toolkit==3.0.19
+pyfcm==1.5.4
 pyotp==2.6.0
 pyparsing==2.4.7
 pytz==2021.1
